<!-- res/layout/activity_info_security_details.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#365C9A">

    <TextView
        android:id="@+id/coursesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:padding="30sp"
        android:text="R E S O U R C E S"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:backgroundTint="#FFFF"
        android:text="@string/book"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/hecCourseOutlineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFF"
        android:text="@string/hec_course_outline"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/pastPapersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hecCourseOutlineButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFF"
        android:text="@string/past_papers"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pastPapersButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFF"
        android:text="@string/notes"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back Button"
        android:padding="8dp"
        android:src="@drawable/backbtn" />

</RelativeLayout>
